namespace Calculator.SimpleCalculatorFactory.Buttons;

public abstract class Button
{
    public abstract string Press();
}
