namespace Calculator.SimpleCalculatorFactory.Buttons;

public class ClearButton : Button
{
    public override string Press() => "C";
}
