namespace Calculator.SimpleCalculatorFactory.Buttons;

public class ClearEntryButton : Button
{
    public override string Press() => "CE";
}
