namespace Calculator.SimpleCalculatorFactory.Buttons;

public class CosButton : Button
{
    public override string Press() => "cos";
}
