namespace Calculator.SimpleCalculatorFactory.Buttons;

public class EqualsButton : Button
{
    public override string Press() => "=";
}
