namespace Calculator.SimpleCalculatorFactory.Buttons;

public class LogButton : Button
{
    public override string Press() => "log";
}
