namespace Calculator.SimpleCalculatorFactory.Buttons;

public class MemoryRecallButton : Button
{
    public override string Press() => "MR";
}
