namespace Calculator.SimpleCalculatorFactory.Buttons;

public class MemoryStoreButton : Button
{
    public override string Press() => "MS";
}
