namespace Calculator.SimpleCalculatorFactory.Buttons;

public class PercentButton : Button
{
    public override string Press() => "%";
}
