namespace Calculator.SimpleCalculatorFactory.Buttons;

public class PlusMinusButton : Button
{
    public override string Press() => "±";
}
