namespace Calculator.SimpleCalculatorFactory.Buttons;

public class SinButton : Button
{
    public override string Press() => "sin";
}
