namespace Calculator.SimpleCalculatorFactory.Buttons;

public class SqrtButton : Button
{
    public override string Press() => "√";
}
